www/styles/unison-light-pastel.css
/* $Id: unison.css,v 1.39 2006/11/04 03:48:25 rkh Exp $     emacs: -*-c-*-  */

/* light-pastel */

/*
  The color palette should be decomposed into the simplest set of colors,
  such as:
  FG, BG
  HIGHLIGHT_FG, BG
  HIGHLIGHT2_FG, BG

  or consider:
  HUE{1,2,3,4}{A,B,C,D}_{FG,BG} where HUE1 is a color group, A-D are
  specifc colors, and FG,BG provide contrast for highlighting

*/


body {
 background: white;
 font-family: sans-serif;
}

img {
 border: none;
}


a:hover {
 background: #FFECBF;
 color: black;
}
a.extlink {
  /* consider css2 :after pseudo-element instead */
 background: url(../av/extlink.gif) right center no-repeat;
 padding-right: 14px;
  target: new-window;
}

a.nofeedback:hover {
 background: white;
}


/* page elements */
table.page {
 width: 100%;
}
table.page td {
 margin: 0;
 padding: 2px;
 vertical-align: middle;
}
table.page td.left {
  text-align: center;
  width: 120px;
  border-right: medium double #6D6DBF;
}
table.page td.body {
  padding: 10px 0px 10px 0px;
  border-top: medium double #6D6DBF;
  border-bottom: medium double #6D6DBF;
}
table.page td.right {
  text-align: left;
}


/* navbar */
div.nav table {
 border-spacing: 0px;
 border: none;
 margin: 0px;
 padding: 0px;
 width: 100%;
}
div.nav table.navp {
 border: none;
 border-bottom: 2px solid white;
}
div.nav table.navc {
 border: medium solid #6D6DBF;
 padding: 1px;
}
div.nav ul {
 display: inline;
 padding: 0px;
 margin: 0px;
 list-style-type: none;
 text-align: left;
}
div.nav td.right {
 text-align: right;
}
div.nav table.navp ul {
}
div.nav li { 
 display: inline;
 background: white;
 border: thin solid #6D6DBF;
 -moz-border-radius: 3px;
 border-radius: 3px;
 color: #6D6DBF;
}
div.nav li.selected { 
 background: #6D6DBF;
 border-color: #6D6DBF;
 color: white;
 font-weight: bold;
}
div.nav table.navp li.selected {
 border-top: thin solid #6D6DBF;  
 border-bottom: 5px solid #6D6DBF;  
}
div.nav li a, div.nav li span {
 padding: 0px 4px 0px 4px;
}
div.nav a {
 text-decoration: none;
 color: #6D6DBF;
}
div.nav a:hover {
 color: black;
 background-color: #FFECBF;
 border-color: #6D6DBF;
}







/* grouped data */
form.group fieldset {
 border: medium solid #6D6DBF;
 margin: 5px 0px 15px 0px;
 padding: 3px;
}

form.group legend {
 border: thin solid #6D6DBF;
 background: #C8C8FF;
 color: black;
 font-weight: bold;
 padding: 2px 5px 2px 5px;
}

span.group_ctl {
 background: white;
 color: #6D6DBF;

}

table.group {
 width: 100%;
 margin: 0;
  margin-top: 10px;
 padding: 0;
 border: 0;
 border-spacing: 0;
}

table.group th.grouptag {
 border: thin solid #6D6DBF;
 -moz-border-radius: 4px;
  border-radius: 4px;
 background: #6D6DBF;
 width: 20%;
 font-size: largest;
 color: white;
}

table.group td {
 border: medium solid #6D6DBF;
 -moz-border-radius: 4px;
  border-radius: 4px;
}


table.summary {
 width: 100%;
 background: white;
 border: none;
 margin: 0px;
 padding: 0px;
}
table.summary th {
 border: none;
 border-right: medium solid #73BF60;
 margin: 0px;
 padding: 0px;
 text-align: right;
 vertical-align: top;
 white-space: nowrap;
}
table.summary th div {
 border: none;
 border-left: thin solid #73BF60;
 border-top: thin solid #73BF60;
 border-bottom: thin solid #73BF60;
 color: black;
 background: #CCFFBF;
 white-space: nowrap;
 padding: 1px 4px 1px 4px;
 margin: 0px;
}
table.summary td {
 vertical-align: top;
 border: none;
 margin: 0px;
 padding: 0px;
}


/* Quick Links */
table.quicklinks {
  /* border:  #6D6DBF thin solid; */
}
td.quicklinks_title {
 background: #6D6DBF;
 color: white;
 padding-left: 2px;
 padding-right: 2px;
 white-space: nowrap;
 font-style: italic; 
}
td.quicklinks {
 border:  thin solid #6D6DBF;
 color: #6D6DBF;
 padding-left: 2px;
 padding-right: 2px;
 white-space: nowrap;
}


/* credits */
table.credits {
 border: #6D6DBF thin solid;
}
table.credits th {
 border: #6D6DBF thin solid;
 background: #6D6DBF;
  /* color: white; */
}
table.credits td {
 border: #6D6DBF thin solid;
}


table.go {
  border-collapse: collapse;
}
tr.go_function, tr.go_process, tr.go_component {
  /*
	border: 1px black dashed;
	background: #eee;
  */
 padding: 1px;
}
table.go th {
 padding: 1px 4px 1px 1px;
 font-weight: bold;
  font-style: italic;
 text-align: left;
  vertical-align: top;
}
table.go td {
 padding: 1px;
}

table.uwtable {
 background: white;
 border: none;
  border-collapse: collapse;
}
table.uwtable th, table.uwtable td {
  border: thin solid;
}
table.uwtable th {
  border-color: #73BF60;
  color:  black;
  background: #CCFFBF;
 text-align: center;
 font-weight: bold;
}
table.uwtable td {
  border-color: #73BF60;
  color:  black;;
  background: white;
  white-space: wrap;
}
table.uwtable .highlighted, table.uwtable .highlighted td {
 border-color: #73BF60;
 background: #FFD980;
 color: black;
}


/* software stack table (in about_unison) */
table.sw_stack {
 border: medium #6D6DBF solid;
}
table.sw_stack tr {
 border: thin #6D6DBF solid;
}
table.sw_stack th {
 background: #6D6DBF;
 color: white;
 vertical-align: top;
 padding: 5px;
}
table.sw_stack td.sw_stack_sep {
 border-top: thin solid #6D6DBF;
 border-bottom: thin solid #6D6DBF;
}



span.page_break {
  border-bottom: medium double #6D6DBF;
}

/* 
TR.tablesep {
  background: orange;
}
*/

span.page_title {
  font-weight: bold;
}


/* cheap text buttons */
span.button {
 background: #FFFFFF;
 color: #6D6DBF;
 margin: 0px 2px 0px 2px;
}
span.button:hover {
 background: #FFECBF;
}
/* SPAN.button A {
   color: white;
   font-weight: bold;
   text-decoration: none;
   } */



div.important {
 border: red medium solid;
 padding: 4px;
 margin: 20px 20px 20px 20px;
 color: #BF608A;
 background-color: #FFFFFF;
}



/* tooltip */
span.has_tooltip {
 color: black;
 background: #FFBFDC;
 cursor:help;
}

span.tooltip {
 border: none;
 background-color: #FFBFDC;
 color: black;
 font-weight: bold;
 font-size: smaller;
 padding: none;
 margin: none;
}

span.tooltip:hover {
 cursor:pointer;cursor:help;
}


/* domTT Classic Style, from domTT examples.css */
div.domTTUnison {
 border: medium double black;
 background: #FFBFDC;
}
div.domTTUnison .caption {
  font-family: serif;
  font-size: 12px;
  font-weight: bold;
  font-style: italic;
 padding: 2px 2px;
 background: #FFBFDC;
}
div.domTTUnison .contents {
 color: black;
 font-size: 12px;
 font-family: Arial, sans-serif;
 padding: 2px 2px;
}



pre.code {
 border: black thin dashed;
 background: #99FF80;
 margin: 20px;
 padding: 5px;
 overflow: auto;
}


dl {
 margin-right: 50px;
}
dt {
 font-style: italic;
}
dd {
 margin-right: 50px;
 font-size: smaller;
}

/* miscellany */
span.error {
 color: #BF608A;
}
span.debug {
  background-color: #FF80B8;
}
div.warning {
 border: #BF608A medium solid;
 padding: 2px;
 margin: 5px;
 color: #BF608A;
}
div.sql {
 border: #73BF60 thin solid;
 padding: 2px;
 margin: 5px;
 color: #73BF60;
 background-color: white;
 font-family: monospace;
 font-size: xx-small;
}
span.note {
  font-size: 0.8em;
  font-style: italic;
}

